k8s/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
      version: green
  template:
    metadata:
      labels:
        app: hello
        version: green
    spec:
      containers:
      - name: myapp
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
