k8s/hello-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service-green
spec:
  selector:
    app: hello
    version: green
  ports:
  - port: 80
    targetPort: 8080
