k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello
    version: blue   # 👈 initially points to blue
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
